@@ -1,13 +1,17 @@
 package io.github.janmalch.kino.problem;
 
+import io.github.janmalch.kino.util.Contract;
 import java.net.URI;
 import java.util.*;
+import javax.validation.constraints.NotNull;
 import javax.ws.rs.core.Response;
+import javax.ws.rs.core.UriBuilder;
 
 public class ProblemBuilder {
 
+  /** Set of reserved properties: "type", "title", "status", "detail", "instance", "cause" */
   private static final Set<String> RESERVED =
-      new HashSet<>(Arrays.asList("type", "title", "status", "detail", "instance", "cause"));
+      Set.of("type", "title", "status", "detail", "instance", "cause");
 
   private URI type = Problem.DEFAULT_TYPE;
   private String title;
@@ -18,40 +22,101 @@ public class ProblemBuilder {
 
   ProblemBuilder() {}
 
-  public ProblemBuilder type(URI type) {
+  /**
+   * Sets the given URI as the type
+   *
+   * @return this ProblemBuilder instance
+   * @throws IllegalArgumentException if type is null
+   */
+  public ProblemBuilder type(@NotNull URI type) {
+    Contract.require(type != null, "type for Problem may never be null");
     this.type = type;
     return this;
   }
 
+  /**
+   * Appends the given path to the default Problem type
+   *
+   * @return this ProblemBuilder instance
+   * @see Problem#DEFAULT_TYPE
+   */
+  public ProblemBuilder type(String path) {
+    this.type = UriBuilder.fromUri(Problem.DEFAULT_TYPE).path(path).build();
+    return this;
+  }
+
+  /**
+   * Sets the given String as the title
+   *
+   * @return this ProblemBuilder instance
+   */
   public ProblemBuilder title(String title) {
     this.title = title;
     return this;
   }
 
+  /**
+   * Sets the given StatusType as the status
+   *
+   * @return this ProblemBuilder instance
+   */
   public ProblemBuilder status(Response.StatusType status) {
     this.status = status;
     return this;
   }
 
+  /**
+   * Sets the given String as the detail message
+   *
+   * @return this ProblemBuilder instance
+   */
   public ProblemBuilder detail(String detail) {
     this.detail = detail;
     return this;
   }
 
+  /**
+   * Sets the given URI as the instance
+   *
+   * @return this ProblemBuilder instance
+   */
   public ProblemBuilder instance(URI instance) {
     this.instance = instance;
     return this;
   }
 
-  public Problem build() {
-    return new ProblemImpl(type, title, status, detail, instance, parameters);
+  /**
+   * Auto generates an instance based on the type and always adds a timestamp as queryParam
+   *
+   * @return this ProblemBuilder instance
+   * @throws IllegalStateException if the type is null
+   */
+  public ProblemBuilder instance() {
+    Contract.check(
+        this.type != null, "auto-generating instance field requires setting type field before");
+    this.instance = UriBuilder.fromUri(type).queryParam("time", System.currentTimeMillis()).build();
+    return this;
   }
 
+  /**
+   * Adds the given custom parameter with the given value
+   *
+   * @return this ProblemBuilder instance
+   * @throws IllegalArgumentException if the given key is a reserved property
+   * @see ProblemBuilder#RESERVED
+   */
   public ProblemBuilder parameter(String key, Object value) {
-    if (RESERVED.contains(key)) {
-      throw new IllegalArgumentException("'" + key + "' is a reserved property");
-    }
+    Contract.require(!RESERVED.contains(key), "'" + key + "' is a reserved property");
     this.parameters.put(key, value);
     return this;
+  }
+
+  /**
+   * Builds a Problem from the previously set values
+   *
+   * @return a Problem based on this builder's values
+   */
+  public Problem build() {
+    return new ProblemImpl(type, title, status, detail, instance, parameters);
   }
 }
